[gd_scene load_steps=13 format=3 uid="uid://c00sspw25k4sh"]

[ext_resource type="Script" uid="uid://dklaod2oh7b1n" path="res://PlayerStuff/arm_element.gd" id="1_mtef1"]
[ext_resource type="Texture2D" uid="uid://ciqpxala4785m" path="res://Assets/hands.png" id="2_ueipr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8rcx8"]
atlas = ExtResource("2_ueipr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpo2g"]
atlas = ExtResource("2_ueipr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_umxd5"]
atlas = ExtResource("2_ueipr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hajxm"]
atlas = ExtResource("2_ueipr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fag11"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rcx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpo2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umxd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hajxm")
}],
"loop": true,
"name": &"Hands",
"speed": 0.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_mtef1"]
radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ueipr"]
size = Vector2(12, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8rcx8"]
size = Vector2(12, 1)

[sub_resource type="Gradient" id="Gradient_qt7nd"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bgvey"]
gradient = SubResource("Gradient_qt7nd")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[node name="ArmElement" type="Node2D"]
z_index = 3
script = ExtResource("1_mtef1")

[node name="HandArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 8

[node name="HandsSprite" type="AnimatedSprite2D" parent="HandArea"]
unique_name_in_owner = true
position = Vector2(0, -3)
sprite_frames = SubResource("SpriteFrames_fag11")
animation = &"Hands"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HandArea"]
shape = SubResource("CircleShape2D_mtef1")

[node name="BottomArea" type="Area2D" parent="HandArea"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 6

[node name="BAShape" type="CollisionShape2D" parent="HandArea/BottomArea"]
shape = SubResource("RectangleShape2D_ueipr")

[node name="TopArea" type="Area2D" parent="HandArea"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HandArea/TopArea"]
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_8rcx8")

[node name="PointLight2D" type="PointLight2D" parent="HandArea"]
energy = 0.2
texture = SubResource("GradientTexture2D_bgvey")
